[package]
name = "ruzz"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1.7"
termion = "1.5"
reqwest = { version = "0.10", features = ["blocking"] }
tui = "0.10.0"
